# sgddg

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
eval/: __init__.py  benchmark_loader.py  benchmark_runner.py  bm25_retriever.py  language_quality.py  ranking_metrics.py
generation/: kg_enhancer.py  llm_adapter.py  optimized_llm_adapter.py  semantic_profiler.py  sfd_generator.py  ufd_generator.py
kg/: alias_store.py  concept_store.py  kg_manager.py  relationship_store.py  vector_store.py
profiling/: __init__.py  bm25_index.py  column_profiler.py  column_relationship_analyzer.py  context_pruner.py  reranker.py  schema_extractor.py  schema_matcher.py  topic_detector.py
schemas/: alias.schema.json  concept.schema.json  evidence.schema.json  mapping.schema.json
scripts/: build_kg.py  generate_metadata.py
sgddg/: __init__.py  adaptive_router.py  cache.py  conflict_resolver.py  pipeline.py  problem_classifier.py  prompt_compressor.py  relationship_reasoner.py  tier0_filter.py  unified_generator.py
sgddg/matchers/: __init__.py  case_library.py  context_aware_matcher.py  multi_granularity_matcher.py  utils.py
tests/: conftest.py  test_alias_store.py  test_concept_store.py  test_language_quality.py  test_ranking_metrics.py  test_relationship_store.py
utils/: api_cache.py  cost_tracker.py  log_config.py
